# sem_project_focp

./: .gitattributes  .gitignore  CMakeLists.txt  CodeChunks.db  FRONTEND_INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  README.md  RENDERER_DOCUMENTATION.md  book.cpp  book.h  cli.cpp  database.cpp  database.h  dbmanager.cpp  library.cpp  library.db  library.h  main.cpp  member.cpp  member.h  package.json  test.cpp
lmsElectron/: addbook.html  addmember.html  backend-client.js  borrowedbooks.html  dashboard.html  database.js  database.json  deletebook.html  deletemember.html  help.html  index.html  issuebook.html  lms.db  main.js  package-lock.json  package.json  preload.js  renderer.js  returnbook.html  searchbook.html  searchmember.html  signup.html  style.css  viewbooks.html  viewmembers.html
lmsElectron/data/: library.db
lmsElectron/renderer/: renderer.js
